@@ -195,6 +195,8 @@ New Features
 
 * SOLR-8698: params.json can now specify 'appends' and 'invariants' (noble)
 
+* SOLR-8831: allow _version_ field to be retrievable via docValues (yonik)
+
 
 Bug Fixes
 ----------------------
